plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/jvm/jvm.kt
actual typealias <!LINE_MARKER("descr='Has expects in jvmJs module'")!>JvmJs<!> = Long

fun jvmTest(arg: Common) {
    takeCommon(arg)
}
